# kev

./: .gitignore  Cargo.toml  LICENSE  README.md
abyss/: Cargo.toml
abyss/src/: addressing.rs  kprint.rs  lib.rs  spin_lock.rs
doc/abyss/: constant.MAX_CPU.html  index.html  macro.debug.html  macro.info.html  macro.print.html  macro.println.html
doc/addr2line/: all.html  fn.demangle_auto.html  struct.FrameIter.html  struct.Location.html
doc/ahash/: index.html  struct.AHasher.html
doc/bitflags/: all.html  macro.bitflags.html
doc/cfg_if/: all.html
doc/crossbeam_queue/: index.html  struct.SegQueue.html
doc/crossbeam_utils/: all.html  index.html  sidebar-items.js  struct.CachePadded.html
doc/gimli/: all.html  sidebar-items.js  struct.AArch64.html  struct.BigEndian.html  struct.DebugAddrBase.html  struct.DebugArangesOffset.html  struct.DebugLineOffset.html  struct.DebugLocListsBase.html  struct.DebugMacroOffset.html  struct.DebugRngListsIndex.html  struct.DebugStrOffsetsBase.html  struct.DebugStrOffsetsIndex.html  struct.DebugTypeSignature.html  struct.DebugTypesOffset.html  struct.LittleEndian.html  struct.Register.html  struct.RiscV.html  struct.X86.html  struct.X86_64.html  trait.Endianity.html  trait.StableDeref.html
doc/hashbrown/: all.html  enum.TryReserveError.html  (+3 more)
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
guest/: .cargo  Cargo.toml  rust-toolchain
keos/: Cargo.toml
keos/src/: fs.rs  interrupt.rs  lib.rs  panicking.rs
keos/src/mm/: alloc.rs  mod.rs  slob_allocator.rs
keos/src/sync/: mod.rs
keos/src/thread/: channel.rs  mod.rs  scheduler.rs
kev/: Cargo.toml
projects/: Cargo.toml  build.rs  rust-toolchain
projects/project2/: Cargo.toml  build.rs
projects/project2/src/: hypercall.rs  lib.rs  main.rs  msr.rs  no_ept_vm.rs  pio.rs
projects/project2/src/vmexit/: cpuid.rs  hypercall.rs  mod.rs  msr.rs  pio.rs
projects/project4/: Cargo.toml  build.rs
projects/project4/rootfs/: disk_file
projects/project4/src/: lib.rs  main.rs  vm.rs
projects/project4/src/dev/: mod.rs  simple_virtio.rs  x2apic.rs
projects/project4/src/virtio/: mod.rs  virt_queue.rs
projects/project5/: Cargo.toml  build.rs
projects/project5/src/: main.rs
spin_lock/: Cargo.toml
(+7489 files in other folders)
