[package]
name = "keos"
version = "0.1.0"
edition = "2021"

[dependencies]
abyss = { path = "../abyss" }
bitflags = "1.3.2"
num_enum = { version = "0.5", default-features=false }
simple_fs = { path = "../fs/simple_fs" }
crossbeam-utils = { version = "0.8", default-features = false }

# Debugging
unwind = { path = "../lib/unwind" }
stable_deref_trait = { version = "1.1.0", default-features = false, features = ["alloc"] }
addr2line = { version = "0.19", features = ["rustc-demangle"], default-features = false }
gimli = { version = "0.27", features = ["endian-reader", "read"], default-features = false }
object = { version = "0.30.0", features = ["read_core", "elf", "unaligned"], default-features = false }

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc", "nightly"]


[features]
default = ["exit_on_qemu"]
smp = ["abyss/smp"]
exit_on_qemu = []