[package]
name = "project2"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
kev = { path = "../../kev" }
keos = { path ="../../keos", features = ["smp"] }
project1 = { path ="../project1" }

[dependencies.iced-x86]
version = "1.18.0"
default-features = false
features = ["no_std", "decoder", "intel"]

[build-dependencies]
simple_fs = { path = "../../fs/simple_fs" }